--- a/week4.html
+++ b/week4.html
@@ -7,58 +7,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (1)</b></font></td></tr>
-<tr><td>KMurray</td>       <td></td><td align=right>0</td></tr>
+<tr><td>KMurray</td>       <td></td><td align=right>190</td></tr>
 <tr><td>Swift</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>JWilliams</td>     <td></td><td align=right>30</td></tr>
 <tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Kelce</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McManus</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>McManus</td>       <td></td><td align=right>5</td></tr>
+<tr><td>MJones</td>        <td></td><td align=right>115</td></tr>
+<tr><td></td>              <td></td><td align=right>340</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (8)</b></font></td></tr>
-<tr><td>Stafford</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Stafford</td>      <td></td><td align=right>145</td></tr>
+<tr><td>Elliott</td>       <td></td><td align=right>120</td></tr>
 <tr><td>MSanders</td>      <td></td><td align=right>0</td></tr>
-<tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>MBrown</td>        <td></td><td align=right>170</td></tr>
+<tr><td>ARobinson</td>     <td></td><td align=right>30</td></tr>
 <tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Tucker</td>        <td></td><td align=right>120</td></tr>
+<tr><td>Lawrence</td>      <td></td><td align=right>125</td></tr>
+<tr><td></td>              <td></td><td align=right>710</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (2)</b></font></td></tr>
-<tr><td>Mahomes</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Singletary</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Mahomes</td>       <td></td><td align=right>290</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>80</td></tr>
+<tr><td>Singletary</td>    <td></td><td align=right>35</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>105</td></tr>
+<tr><td>Godwin</td>        <td></td><td align=right>25</td></tr>
 <tr><td>Hooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Myers</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hubbard</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Myers</td>         <td></td><td align=right>20</td></tr>
+<tr><td>Hubbard</td>       <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>580</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>States (6)</b></font></td></tr>
-<tr><td>RWilson</td>       <td></td><td align=right>0</td></tr>
+<tr><td>RWilson</td>       <td></td><td align=right>200</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Ruggs</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Andrews</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Blankenship</td>   <td></td><td align=right>0</td></tr>
-<tr><td>Harris</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Ruggs</td>         <td></td><td align=right>30</td></tr>
+<tr><td>Hill</td>          <td></td><td align=right>365</td></tr>
+<tr><td>Andrews</td>       <td></td><td align=right>30</td></tr>
+<tr><td>Blankenship</td>   <td></td><td align=right>90</td></tr>
+<tr><td>Harris</td>        <td></td><td align=right>80</td></tr>
+<tr><td></td>              <td></td><td align=right>795</td></tr>
 </table>
 </td>
 </tr>
@@ -66,58 +66,58 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Steven (3)</b></font></td></tr>
-<tr><td>LJackson</td>      <td></td><td align=right>0</td></tr>
-<tr><td>JRobinson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Ridley</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Diggs</td>         <td></td><td align=right>0</td></tr>
+<tr><td>LJackson</td>      <td></td><td align=right>150</td></tr>
+<tr><td>JRobinson</td>     <td></td><td align=right>185</td></tr>
+<tr><td>DCook</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Ridley</td>        <td></td><td align=right>40</td></tr>
+<tr><td>Diggs</td>         <td></td><td align=right>55</td></tr>
 <tr><td>LThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Koo</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Chase</td>         <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Koo</td>           <td></td><td align=right>35</td></tr>
+<tr><td>Chase</td>         <td></td><td align=right>35</td></tr>
+<tr><td></td>              <td></td><td align=right>500</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (10)</b></font></td></tr>
-<tr><td>Hurts</td>         <td></td><td align=right>0</td></tr>
-<tr><td>JTaylor</td>       <td></td><td align=right>0</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hurts</td>         <td></td><td align=right>145</td></tr>
+<tr><td>JTaylor</td>       <td></td><td align=right>200</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>25</td></tr>
+<tr><td>Hopkins</td>       <td></td><td align=right>30</td></tr>
 <tr><td>Allen</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Goedert</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Succop</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Fields</td>        <td></td><td align=right>25</td></tr>
+<tr><td></td>              <td></td><td align=right>635</td></tr>
 </table>
 </td>
 <td></td><td></td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (4)</b></font></td></tr>
-<tr><td>Herbert</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kamara</td>        <td></td><td align=right>0</td></tr>
-<tr><td>EdwardsHelaire</td><td></td><td align=right>0</td></tr>
-<tr><td>Kupp</td>          <td></td><td align=right>0</td></tr>
-<tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Gesicki</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
-<tr><td>ZWilson</td>       <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Herbert</td>       <td></td><td align=right>155</td></tr>
+<tr><td>Kamara</td>        <td></td><td align=right>60</td></tr>
+<tr><td>EdwardsHelaire</td><td></td><td align=right>100</td></tr>
+<tr><td>Kupp</td>          <td></td><td align=right>30</td></tr>
+<tr><td>McLaurin</td>      <td></td><td align=right>235</td></tr>
+<tr><td>Gesicki</td>       <td></td><td align=right>75</td></tr>
+<tr><td>Sanders</td>       <td></td><td align=right>40</td></tr>
+<tr><td>ZWilson</td>       <td></td><td align=right>170</td></tr>
+<tr><td></td>              <td></td><td align=right>865</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (5)</b></font></td></tr>
-<tr><td>JAllen</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gibson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Jefferson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Woods</td>         <td></td><td align=right>0</td></tr>
+<tr><td>JAllen</td>        <td></td><td align=right>135</td></tr>
+<tr><td>Gibson</td>        <td></td><td align=right>80</td></tr>
+<tr><td>Montgomery</td>    <td></td><td align=right>200</td></tr>
+<tr><td>Jefferson</td>     <td></td><td align=right>115</td></tr>
+<tr><td>Woods</td>         <td></td><td align=right>75</td></tr>
 <tr><td>Tonyan</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Bass</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Bass</td>          <td></td><td align=right>110</td></tr>
 <tr><td>JWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td></td>              <td></td><td align=right>715</td></tr>
 </table>
 </td>
 </tr>
@@ -125,29 +125,29 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Brady</td>         <td></td><td align=right>40</td></tr>
+<tr><td>Henry</td>         <td></td><td align=right>125</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>285</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
-<tr><td>Sermon</td>        <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>30</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>75</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>45</td></tr>
+<tr><td>Sermon</td>        <td></td><td align=right>40</td></tr>
+<tr><td></td>              <td></td><td align=right>640</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (9)</b></font></td></tr>
-<tr><td>Rodgers</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Ekeler</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DAdams</td>        <td></td><td align=right>0</td></tr>
-<tr><td>DSamuel</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Rodgers</td>       <td></td><td align=right>185</td></tr>
+<tr><td>Chubb</td>         <td></td><td align=right>50</td></tr>
+<tr><td>Ekeler</td>        <td></td><td align=right>230</td></tr>
+<tr><td>DAdams</td>        <td></td><td align=right>30</td></tr>
+<tr><td>DSamuel</td>       <td></td><td align=right>275</td></tr>
 <tr><td>Hockenson</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Gay</td>           <td></td><td align=right>0</td></tr>
-<tr><td>Ammendola</td>     <td></td><td align=right>0</td></tr>
-<tr><td></td>              <td></td><td align=right>0</td></tr>
+<tr><td>Gay</td>           <td></td><td align=right>75</td></tr>
+<tr><td>Ammendola</td>     <td></td><td align=right>55</td></tr>
+<tr><td></td>              <td></td><td align=right>900</td></tr>
 </table>
 <td></td><td></td>
 </td>
@@ -166,43 +166,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
+<tr><td><font size=2>Sam(9)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>2725</font></td>
+    <td><font size=2>2125</font></td>
+    <td><font size=2>900</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>1</font></td>
 <tr><td><font size=2>Matthew(1)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>3085</font></td>
-    <td><font size=2>2410</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>3425</font></td>
+    <td><font size=2>3120</font></td>
     <td><font size=2>1360</font></td>
-    <td><font size=2>595</font></td>
+    <td><font size=2>340</font></td>
     <td><font size=2>2</font></td>
 <tr><td><font size=2>Roger(7)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>2325</font></td>
-    <td><font size=2>2150</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2965</font></td>
+    <td><font size=2>3050</font></td>
     <td><font size=2>895</font></td>
     <td><font size=2>610</font></td>
     <td><font size=2>0</font></td>
-<tr><td><font size=2>Sam(9)</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>1825</font></td>
-    <td><font size=2>1485</font></td>
-    <td><font size=2>755</font></td>
-    <td><font size=2>430</font></td>
-    <td><font size=2>0</font></td>
 <tr><td><font size=2>Mike(5)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>1580</font></td>
-    <td><font size=2>2555</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>2295</font></td>
+    <td><font size=2>3420</font></td>
     <td><font size=2>805</font></td>
     <td><font size=2>325</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Steven(3)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>1715</font></td>
-    <td><font size=2>2575</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2215</font></td>
+    <td><font size=2>3210</font></td>
     <td><font size=2>695</font></td>
     <td><font size=2>360</font></td>
     <td><font size=2>0</font></td>
@@ -216,42 +216,42 @@
     <td><font size=2></font></td></tr>
 <tr><td><font size=2>Rich(2)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>2425</font></td>
-    <td><font size=2>1675</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>3005</font></td>
+    <td><font size=2>2470</font></td>
     <td><font size=2>1120</font></td>
     <td><font size=2>465</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>John(10)</font></td>
-    <td><font size=2>2</font></td>
+    <td><font size=2>3</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>1755</font></td>
-    <td><font size=2>1765</font></td>
+    <td><font size=2>2390</font></td>
+    <td><font size=2>2265</font></td>
     <td><font size=2>745</font></td>
     <td><font size=2>390</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>2085</font></td>
-    <td><font size=2>2015</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2795</font></td>
+    <td><font size=2>2355</font></td>
     <td><font size=2>830</font></td>
     <td><font size=2>460</font></td>
     <td><font size=2>1</font></td>
 <tr><td><font size=2>States(6)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1990</font></td>
-    <td><font size=2>1910</font></td>
-    <td><font size=2>775</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2785</font></td>
+    <td><font size=2>2490</font></td>
+    <td><font size=2>795</font></td>
     <td><font size=2>555</font></td>
     <td><font size=2>0</font></td>
 <tr><td><font size=2>Grant(4)</font></td>
-    <td><font size=2>1</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>1915</font></td>
-    <td><font size=2>2160</font></td>
-    <td><font size=2>820</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2780</font></td>
+    <td><font size=2>2875</font></td>
+    <td><font size=2>865</font></td>
     <td><font size=2>400</font></td>
     <td><font size=2>0</font></td>
 </table>
