--- a/freeagt.html
+++ b/freeagt.html
@@ -1,99 +1,100 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 3)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2021 Free Agent Leaderboard<br>(Through week 4)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 490</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 405</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 385</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jared Goff             </td><td><font size=3> 365</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 290</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3>  80</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Taysom Hill            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Sam Darnold            </td><td><font size=3> 790</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Taylor Heinicke        </td><td><font size=3> 650</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Jared Goff             </td><td><font size=3> 510</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jimmy Garoppolo        </td><td><font size=3> 460</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Carson Wentz           </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 320</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Teddy Bridgewater      </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Baker Mayfield         </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Taysom Hill            </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Tua Tagovailoa         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Andy Dalton            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Mitchell Trubisky      </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
+<tr><td><font size=3>JD McKissic            </td><td><font size=3> 190</td></tr>
 <tr><td><font size=3>Malcolm Brown          </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Phillip Lindsay        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Jeremy McNichols       </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Peyton Barber          </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Giovani Bernard        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Alex Collins           </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>James White            </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>JD McKissic            </td><td><font size=3>  90</td></tr>
+<tr><td><font size=3>Darrel Williams        </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Jeremy McNichols       </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Damien Williams        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Andy Janovich          </td><td><font size=3>  55</td></tr>
 <tr><td><font size=3>JaMycal Hasty          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Alec Ingold            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Andy Janovich          </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Darrel Wiliams         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Ty Johnson             </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Gus Edwards            </td><td><font size=3>   0</td></tr>
-<tr><td><font size=3>Raheem Mostert         </td><td><font size=3>   0</td></tr>
+<tr><td><font size=3>Brandon Bolden         </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
 <tr><td><font size=3>Jamal Agnew            </td><td><font size=3> 400</td></tr>
+<tr><td><font size=3>AJ Green               </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>Van Jefferson          </td><td><font size=3> 285</td></tr>
 <tr><td><font size=3>Christian Kirk         </td><td><font size=3> 285</td></tr>
+<tr><td><font size=3>Emmanuel Sanders       </td><td><font size=3> 255</td></tr>
+<tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>Freddie Swain          </td><td><font size=3> 245</td></tr>
 <tr><td><font size=3>Marvin Jones           </td><td><font size=3> 240</td></tr>
 <tr><td><font size=3>Zach Pascal            </td><td><font size=3> 225</td></tr>
-<tr><td><font size=3>Emmanuel Sanders       </td><td><font size=3> 220</td></tr>
 <tr><td><font size=3>KJ Osborn              </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Kalif Raymond          </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>DeAndre Carter         </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Deonte Harris          </td><td><font size=3> 185</td></tr>
 <tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 185</td></tr>
-<tr><td><font size=3>Tim Patrick            </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>Hunter Renfrow         </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>Freddie Swain          </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>Van Jefferson          </td><td><font size=3> 165</td></tr>
-<tr><td><font size=3>Deonte Harris          </td><td><font size=3> 160</td></tr>
-<tr><td><font size=3>Byron Pringle          </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>Darius Slayton         </td><td><font size=3> 155</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 215</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Dawson Knox            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Chris Manhertz         </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Zach Ertz              </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Foster Moreau          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Ricky Seals-Jones      </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Jody Fortson           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Albert Okwuegbunam     </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Lee Smith              </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Maxx Williams          </td><td><font size=3>  45</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Jack Doyle             </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>David Njoku            </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Dalton Schultz         </td><td><font size=3> 315</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Dawson Knox            </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>CJ Uzomah              </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Juwan Johnson          </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Maxx Williams          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Tyler Conklin          </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Zach Ertz              </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Ross Dwelley           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jody Fortson           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Chris Manhertz         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Hunter Henry           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Blake Jarwin           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Foster Moreau          </td><td><font size=3>  75</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 400</td></tr>
-<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 320</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3> 315</td></tr>
-<tr><td><font size=3>Graham Gano            </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 275</td></tr>
-<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 260</td></tr>
-<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 220</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>Tristan Vizcaino       </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 410</td></tr>
+<tr><td><font size=3>Chase McLaughlin       </td><td><font size=3> 365</td></tr>
+<tr><td><font size=3>Graham Gano            </td><td><font size=3> 350</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 345</td></tr>
+<tr><td><font size=3>Greg Joseph            </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 290</td></tr>
+<tr><td><font size=3>Mason Crosby           </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Tristan Vizcaino       </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 205</td></tr>
 <tr><td><font size=3>Joey Slye              </td><td><font size=3> 180</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 165</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 125</td></tr>
-<tr><td><font size=3>Jake Elliott           </td><td><font size=3> 120</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Austin Seibert         </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 110</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
