--- a/roster.html
+++ b/roster.html
@@ -78,7 +78,7 @@
 <tr><td>HOU</td><td>Brandin Cooks          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Logan Thomas           </td></tr>
-<tr><td> NE</td><td>Jonnu Smith            </td></tr>
+<tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -110,10 +110,10 @@
 <tr><td>MIA</td><td>Mike Gesicki           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIA</td><td>Jason Sanders          </td></tr>
+<tr><td> LV</td><td>Daniel Carlson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Zach Wilson            </td></tr>
 <tr><td>MIA</td><td>Jaylen Waddle          </td></tr>
-<tr><td>LAR</td><td>Jake Funk              </td></tr>
 <tr><td>WAS</td><td>Jaret Patterson        </td></tr>
 <tr><td> SF</td><td>Eli Mitchell           </td></tr>
 </table>
@@ -129,12 +129,12 @@
 <tr><td>ARI</td><td>Chase Edmonds          </td></tr>
 <tr><td>BUF</td><td>Zack Moss              </td></tr>
 <tr><td>HOU</td><td>Mark Ingram            </td></tr>
+<tr><td>CHI</td><td>Damien Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>MIN</td><td>Justin Jefferson       </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
 <tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
-<tr><td>JAX</td><td>DJ Chark               </td></tr>
 <tr><td>WAS</td><td>Curtis Samuel          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> GB</td><td>Robert Tonyan          </td></tr>
@@ -271,7 +271,6 @@
 <tr><td>IND</td><td>Jonathan Taylor        </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td>MIA</td><td>Myles Gaskin           </td></tr>
-<tr><td>HOU</td><td>David Johnson          </td></tr>
 <tr><td>IND</td><td>Nyheim Hines           </td></tr>
 <tr><td> NE</td><td>JJ Taylor              </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -288,6 +287,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>Justin Fields          </td></tr>
 <tr><td>CIN</td><td>Evan McPherson         </td></tr>
+<tr><td>CHI</td><td>Khalil Herbert         </td></tr>
 </table>
 </td>
 <td>
