--- a/pickups.html
+++ b/pickups.html
@@ -70,8 +70,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dalton Schultz/Jonnu Smith</td>
+<td width=50>10/5</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -87,8 +87,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Daniel Carlson/Jake Funk</td>
+<td width=50>10/6</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -267,8 +267,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Khalil Herbert/David Johnson</td>
+<td width=50>10/5</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -334,6 +334,7 @@ Team 5  - Derek Carr/Ryan Fitzpatrick (9/16)<br>
 Team 5  - Mark Ingram/Wil Lutz (9/16)<br>
 Team 8  - Alexander Mattison/Nico Collins (9/24)<br>
 Team 4  - Daniel Jones/Tua Tagovailoa (9/26)
+Team 5  - Damien Williams/DJ Chark (10/6)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
