--- a/pickups.html
+++ b/pickups.html
@@ -333,8 +333,8 @@ Team 9  - Larry Rountree/Jerry Jeudy (9/15)<br>
 Team 5  - Derek Carr/Ryan Fitzpatrick (9/16)<br>
 Team 5  - Mark Ingram/Wil Lutz (9/16)<br>
 Team 8  - Alexander Mattison/Nico Collins (9/24)<br>
-Team 4  - Daniel Jones/Tua Tagovailoa (9/26)
-Team 5  - Damien Williams/DJ Chark (10/6)
+Team 4  - Daniel Jones/Tua Tagovailoa (9/26)<br>
+Team 5  - Damien Williams/DJ Chark (10/5)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
