--- a/pickups.html
+++ b/pickups.html
@@ -334,7 +334,8 @@ Team 5  - Derek Carr/Ryan Fitzpatrick (9/16)<br>
 Team 5  - Mark Ingram/Wil Lutz (9/16)<br>
 Team 8  - Alexander Mattison/Nico Collins (9/24)<br>
 Team 4  - Daniel Jones/Tua Tagovailoa (9/26)<br>
-Team 5  - Damien Williams/DJ Chark (10/5)
+Team 5  - Damien Williams/DJ Chark (10/5)<br>
+Team 6  - Alex Collins/Rashad Penny (10/7)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
