--- a/roster.html
+++ b/roster.html
@@ -158,7 +158,7 @@
 <tr><td>ATL</td><td>Mike Davis             </td></tr>
 <tr><td>LAR</td><td>Sony Michel            </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
-<tr><td>SEA</td><td>Rashaad Penny          </td></tr>
+<tr><td>SEA</td><td>Alex Collins           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
