--- a/pickups.html
+++ b/pickups.html
@@ -335,7 +335,8 @@ Team 5  - Mark Ingram/Wil Lutz (9/16)<br>
 Team 8  - Alexander Mattison/Nico Collins (9/24)<br>
 Team 4  - Daniel Jones/Tua Tagovailoa (9/26)<br>
 Team 5  - Damien Williams/DJ Chark (10/5)<br>
-Team 6  - Alex Collins/Rashad Penny (10/7)
+Team 6  - Alex Collins/Rashad Penny (10/7)<br>
+Team 6  - Sam Darnold/Justice Hill (10/8)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
