--- a/roster.html
+++ b/roster.html
@@ -152,12 +152,12 @@
 <tr><td>SEA</td><td>Russell Wilson         </td></tr>
 <tr><td>ATL</td><td>Matt Ryan              </td></tr>
 <tr><td>BAL</td><td>Tyler Huntley          </td></tr>
+<tr><td>CAR</td><td>Sam Darnold            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> LV</td><td>Josh Jacobs            </td></tr>
 <tr><td>SEA</td><td>Chris Carson           </td></tr>
 <tr><td>ATL</td><td>Mike Davis             </td></tr>
 <tr><td>LAR</td><td>Sony Michel            </td></tr>
-<tr><td>BAL</td><td>Justice Hill           </td></tr>
 <tr><td>SEA</td><td>Alex Collins           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
