--- a/thousand.html
+++ b/thousand.html
@@ -75,6 +75,12 @@
     <td>1325</td>
     <td>Grant</td>
     <td>680</td></tr>
+<tr><td>2021</td>
+    <td>Week 5</td>
+    <td>Roger Bakos</td>
+    <td>1325</td>
+    <td>Randy</td>
+    <td>780</td></tr>
 <tr><td>2013</td>
     <td>Week 15</td>
     <td>Randy Edwards</td>
@@ -741,6 +747,12 @@
     <td>1045</td>
     <td>States</td>
     <td>580</td></tr>
+<tr><td>2021</td>
+    <td>Week 5</td>
+    <td>Sam Edwards</td>
+    <td>1045</td>
+    <td>Mike</td>
+    <td>775</td></tr>
 <tr><td>2002</td>
     <td>Week 4</td>
     <td>John Heinzelmann</td>
