--- a/roster.html
+++ b/roster.html
@@ -75,17 +75,17 @@
 <tr><td>ATL</td><td>Calvin Ridley          </td></tr>
 <tr><td>BUF</td><td>Stefon Diggs           </td></tr>
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
-<tr><td>HOU</td><td>Brandin Cooks          </td></tr>
+<tr><td>BUF</td><td>Emmanuel Sanders       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Logan Thomas           </td></tr>
 <tr><td>DAL</td><td>Dalton Schultz         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Younghoe Koo           </td></tr>
+<tr><td> NE</td><td>Nick Folk              </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NE</td><td>Quinn Nordin           </td></tr>
 <tr><td>CIN</td><td>Ja'Marr Chase          </td></tr>
 <tr><td>PHI</td><td>Kenneth Gainwell       </td></tr>
-<tr><td>CAR</td><td>Terrace Marshall       </td></tr>
 </table>
 </td>
 </tr>
@@ -100,7 +100,7 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> KC</td><td>Clyde Edwards-Helaire  </td></tr>
 <tr><td>ARI</td><td>James Conner           </td></tr>
-<tr><td> NO</td><td>Tony Jones             </td></tr>
+<tr><td> KC</td><td>Darrel Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>WAS</td><td>Terry McLaurin         </td></tr>
 <tr><td>DAL</td><td>CeeDee Lamb            </td></tr>
@@ -183,8 +183,8 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>NYG</td><td>Saquon Barkley         </td></tr>
-<tr><td>BAL</td><td>Le'Veon Bell           </td></tr>
 <tr><td>ATL</td><td>Cordarrelle Patterson  </td></tr>
+<tr><td>NYG</td><td>Devontae Booker        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>Chase Claypool         </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
@@ -218,12 +218,12 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>TEN</td><td>AJ Brown               </td></tr>
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
-<tr><td>NYG</td><td>Kenny Golladay         </td></tr>
 <tr><td>NYJ</td><td>Corey Davis            </td></tr>
 <tr><td>BAL</td><td>Marquise Brown         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td>DEN</td><td>Noah Fant              </td></tr>
+<tr><td>BUF</td><td>Dawson Knox            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BAL</td><td>Justin Tucker          </td></tr>
 <tr><td height=9></td><td></td></tr>
