--- a/pickups.html
+++ b/pickups.html
@@ -82,8 +82,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Emmanuel Sanders/Terrace Marshall</td>
+<td width=50>10/12</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -203,8 +203,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Dawson Knox/Kenny Golladay</td>
+<td width=50>10/12</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -215,8 +215,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Nick Folk/Brandin Cooks</td>
+<td width=50>10/12</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -336,7 +336,9 @@ Team 8  - Alexander Mattison/Nico Collins (9/24)<br>
 Team 4  - Daniel Jones/Tua Tagovailoa (9/26)<br>
 Team 5  - Damien Williams/DJ Chark (10/5)<br>
 Team 6  - Alex Collins/Rashad Penny (10/7)<br>
-Team 6  - Sam Darnold/Justice Hill (10/8)
+Team 6  - Sam Darnold/Justice Hill (10/8)<br>
+Team 4  - Darrel Williams/Tony Jones (10/12)<br>
+Team 7  - Devontae Booker/Le'Veon Bell (10/13)
 </td></tr>
 <tr><td width=50>9/29</td>
 <td width=600>
