--- a/pickups.html
+++ b/pickups.html
@@ -350,4 +350,9 @@ Team 9 - Matt Ammendola, Jameis Winston
 Team 3 - Alexander Mattison<br>
 Team 8 - DeVonta Smith
 </td></tr>
+<tr><td width=50>10/13</td>
+<td width=600>
+Team 7 - Dawson Knox, DeVonta Smith<br>
+Team 8 - Darren Waller, Michael Carter
+</td></tr>
 </table>
