--- a/week6.html
+++ b/week6.html
@@ -55,7 +55,7 @@
 <tr><td>AJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DMoore</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Goedert</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Kmet</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Succop</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fields</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -114,7 +114,7 @@
 <tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Fant</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Tucker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Lawrence</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -141,12 +141,12 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Roger (7)</b></font></td></tr>
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Booker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Carter</td>        <td></td><td align=right>0</td></tr>
+<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
+<tr><td>DSmith</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 <td></td><td></td>
